--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,25 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>taglibs</groupId>-->
+<!--            <artifactId>c</artifactId>-->
+<!--            <version>1.1.2</version>-->
+<!--            <scope>runtime</scope>-->
+<!--            <type>tld</type>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>fmt</artifactId>
+            <version>1.1.2</version>
+            <scope>runtime</scope>
+            <type>tld</type>
+        </dependency>
     </dependencies>
 
     <profiles>
